# ULEI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  test_http_server.py  test_ollama_setup.sh  unified_llm_evaluation_interface_requirements.md
.github/: copilot-instructions.md
docs/: ADAPTER_QUICK_REFERENCE.md  ADDING_NEW_ADAPTER.md  ALTERNATIVE_PROVIDERS.md  GETTING_STARTED.md  HTTP_API.md  QUICK_REFERENCE.md
examples/ci_templates/: azure_pipelines.yaml  github_actions.yaml
examples/configs/: azure_openai_evaluation.yaml  basic_evaluation.yaml  ollama_evaluation.yaml  ollama_quick_test.yaml  rag_evaluation.yaml  server_evaluation.yaml
examples/datasets/: ollama_test.jsonl  rag_sample.jsonl  sample_rag_eval.jsonl  server_test.jsonl
ulei/: __init__.py  pyrightconfig.json
ulei/adapters/: __init__.py  base.py  deepeval_adapter.py  ragas_adapter.py
ulei/cli/: __init__.py  compare.py  main.py  run.py  server.py
ulei/core/: advanced_registry.py  custom_metrics.py  evaluator.py  hot_reload.py  interfaces.py  local_metrics.py  performance.py  registry.py  schemas.py  schemas_with_validators.py.bak  validation.py
ulei/http/: __init__.py  alerts.py  models.py  monitoring.py  queue.py  sampling.py  scheduler.py  server.py
ulei/metrics/: __init__.py
ulei/metrics/local/: __init__.py
ulei/reporters/: __init__.py  base.py  comparison.py  html.py  json.py  junit.py  prometheus.py
ulei/utils/: budget.py  cache.py  config.py  dataset.py  errors.py  logging.py  retry.py  stats.py
