[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ulei"
version = "0.1.0"
description = "Unified LLM Evaluation Interface - Provider-agnostic evaluation for LLM and RAG systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ULEI Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["llm", "evaluation", "rag", "testing", "ai"]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.0.0",
    "fastapi>=0.68.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "boto3>=1.26.0",
    "google-cloud-storage>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "uvicorn[standard]>=0.15.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "ragas>=0.3.0",
    "deepeval>=3.0.0",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
    # Type stubs for better type checking
    "pandas-stubs>=2.0.0",
    "types-pytz>=2024.0.0",
    "types-requests>=2.31.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/unified-llm-evaluation-framework"
Repository = "https://github.com/yourusername/unified-llm-evaluation-framework"
Documentation = "https://github.com/yourusername/unified-llm-evaluation-framework/docs"
"Bug Reports" = "https://github.com/yourusername/unified-llm-evaluation-framework/issues"

[project.scripts]
ulei = "ulei.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ulei*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B904", # raise without from inside except (intentional in error handlers)
    "UP006", # Use lowercase type annotations (requires Python 3.9+)
    "UP035", # typing.X is deprecated, use X instead (requires Python 3.9+)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["E711", "E712"]  # allow == and != with None/True/False in tests
"ulei/adapters/*_adapter.py" = ["E402"]  # adapter registration at end of file


[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false  # Too strict for library code
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped function definitions
disallow_incomplete_defs = false  # Allow partially typed function definitions
disallow_untyped_calls = false  # Allow calls to untyped functions
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # False positives with conditional imports
show_error_codes = true
ignore_missing_imports = true  # Many optional dependencies
allow_untyped_decorators = true  # Allow decorators without type hints

# Per-module overrides
[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ragas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deepeval.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bert_score.*"
ignore_missing_imports = true

# Ignore all errors in specific files with known type issues
[[tool.mypy.overrides]]
module = "ulei.utils.logging"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ulei.utils.cache"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ulei.utils.dataset"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ulei.utils.retry"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ulei.cli.server"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ulei.core.local_metrics"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ulei.http.monitoring"
ignore_errors = true

# Ignore errors in other modules with complex typing
[[tool.mypy.overrides]]
module = [
    "ulei.cli.compare",
    "ulei.cli.run",
    "ulei.core.advanced_registry",
    "ulei.core.custom_metrics",
    "ulei.core.hot_reload",
    "ulei.core.performance",
    "ulei.core.validation",
    "ulei.http.alerts",
    "ulei.http.models",
    "ulei.http.queue",
    "ulei.http.sampling",
    "ulei.http.scheduler",
    "ulei.http.server",
    "ulei.utils.config",
    "ulei.utils.stats",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=ulei",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ulei"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
